Expand testing of DefaultRegistry in order to uncover a bug
ServiceChangeEvents were supposed to be fired when a new provider
  became the highest-priority one.