@@ -14,7 +14,8 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<junit.version>5.7.0</junit.version>
+		<junit.version>5.7.1</junit.version>
+		<mockito.version>3.9.0</mockito.version>
 	</properties>
 
 	<scm>
@@ -58,7 +59,8 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<trimStackTrace>false</trimStackTrace>
-					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation</argLine>
+					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation
+					--add-opens space.arim.omnibus/space.arim.omnibus.defaultimpl.registry=ALL-UNNAMED</argLine>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -103,6 +105,44 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
+	<profiles>
+		<profile>
+			<id>codecov</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>@{argLine} -XX:TieredStopAtLevel=1 -XX:-TieredCompilation
+								--add-opens space.arim.omnibus/space.arim.omnibus.defaultimpl.registry=ALL-UNNAMED</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.8.6</version>
+						<executions>
+							<execution>
+								<id>default-prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>default-report</id>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	
 	<distributionManagement>
 		<repository>
@@ -120,6 +160,18 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
